--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
             android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/gridLayout"
+            android:layout_below="@+id/answerChoices"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="63dp"
             android:textSize="50sp" />
@@ -115,7 +115,7 @@
             tools:layout_editor_absoluteY="0dp" />
 
         <GridLayout
-            android:id="@+id/gridLayout"
+            android:id="@+id/answerChoices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
